--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -18,20 +18,21 @@ $alt-font: $base-font;
    Colors
    ========================================================================== */
 
-$bodycolor      : #faf9fb; //#fff;
+$bodycolor      : #faf9fb;
 $body-color     : $bodycolor;
-$textcolor      : #2D3A57; //#333332;
+$textcolor      : #2D3A57;
 $text-color     : $textcolor;
 $border-color   : $text-color;
-$basecolor 		  : #343434;
+$basecolor 		  : #322B39; //#343434
 $compcolor 		  : spin($basecolor, 180);
 $bordercolor    : $basecolor;
-$white          : #fff;
+$white          : $bodycolor; //set to $bodycolor because I prefer it to straight white
 $black          : #111;
 $accentcolor    : $black;
+$tozier-color   : #8B0300; //because I don't have a place to stash it
 
 /* buttons */
-$primary			: $black;
+$primary			: $basecolor;
 $success			: #5cb85c;
 $warning			: #dd8338;
 $danger				: #C64537;
@@ -51,6 +52,7 @@ $twitter-color      : #55acee;
 $vimeo-color        : #1ab7ea;
 $youtube-color      : #ff3333;
 $github-color       : #333333;
+
 
 /* links */
 $linkcolor 		    : darken($textcolor,30); //#343434;
