worked out a few more elements

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -8,8 +8,9 @@ hr {
 	padding: 0;
 	height: 1px;
 	border: 0;
-	border-top: 1px solid #ccc;
-	border-bottom: 1px solid #fff;
+	border-top: 1px solid $basecolor;
+	@include opacity(0.3);
+	border-bottom: 1px solid $white;
 }
 
 /*
@@ -77,7 +78,7 @@ svg:not(:root) {
   font-weight: 700;
   background-color: $primary;
   color: $white;
-  border-width: 2px !important;
+  border-width: 1px !important;
   border-style: solid !important;
   border-color: $primary;
   text-decoration: none !important;
