--- a/_sass/pygments.scss
+++ b/_sass/pygments.scss
@@ -2,6 +2,8 @@
    Pygments.rb syntax highlighting
    ========================================================================== */
 
+// TODO: Should I do anything with this?
+
 .highlight {
 	background-color: #efefef;
 	font-family: $code-font;
