--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -15,9 +15,9 @@ btnform {
 		margin-bottom: 5px * 2;
 		*margin-left: -7px;
 		padding: 0;
-		color: $textcolor;
+		color: $basecolor;
 		border: 0;
-		border-bottom: 1px solid lighten($black, 80);
+		border-bottom: 1px solid lighten($basecolor, 80);
 		white-space: normal;
 	}
 	p {
