--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,9 +10,9 @@
    Typography
    ========================================================================== */
 
-$doc-font-size: 16;
-$doc-line-height: 26;
-$paragraph-indent: true !default;
+$doc-font-size: 10;
+$doc-line-height: 16;
+$paragraph-indent: false !default;
 $base-font: 'Source Sans Pro', 'PT Serif', serif;
 $heading-font: 'Economica', 'PT Sans Narrow', sans-serif;
 $code-font: "Source Code Pro", "Anonymous Pro", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
