--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -2,6 +2,9 @@
    Typography
    ========================================================================== */
 
+body {@include font-size(10);}
+
+
 /*
    Headings
    ========================================================================== */
