--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,3 +25,6 @@ sitemap: false
 @import "page";
 @import "vendor/rensburg-svg/svg-icons";
 @import "vendor/magnific-popup/magnific-popup";
+
+h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {font-size:65%;}
+h1, h2, h3, h4, h5, h6 {line-height:1.1;}
