--- a/_includes/_social-share.html
+++ b/_includes/_social-share.html
@@ -10,5 +10,9 @@
     <li>
       <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" class="google-plus" title="Share on Google Plus"><span> Google+</span></a>
     </li>
+    <li>
+    <a href="https://www.tumblr.com/widgets/share/tool?canonicalUrl={{ site.url }}{{ page.url }}"><span>Tumblr</span></a>
+    </li>
+<!-- TODO: this needs work -->
   </ul>
 </div><!-- /.social-share -->
