--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -16,8 +16,8 @@ body {
 	@include container;
 	padding: 2em 0 1em;
 	font-family: $heading-font;
-	font-weight: 700;
-	text-transform: uppercase;
+	font-weight: normal;
+	// text-transform: uppercase;
 	@include clearfix;
 }
 
@@ -632,11 +632,12 @@ $button-size: 1.5rem;
 	a:active,
 	a:visited,
 	p,
+	h3,
 	h4,
 	h5,
 	h6,
 	span {
-		@include font-rem(14);
+		@include font-rem(12);
 	}
 	footer {
 		@include grid(12,10);
@@ -671,13 +672,18 @@ $button-size: 1.5rem;
 		@include prefix(12,4);
 		@include suffix(12,3.5);
 	}
-	h4 {
-		text-transform: uppercase;
+	h3 {
 		margin-bottom: 0;
+		line-height: 0;
+	}
+	ul {
+		list-style-type: none;
 	}
 	li {
 		margin-bottom: 0;
 	}
+
+
 }
 
 /*
