--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,3 +28,4 @@ sitemap: false
 
 h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {font-size:65%;}
 h1, h2, h3, h4, h5, h6 {line-height:1.1;}
+.footer-wrap footer span, .footer-wrap footer span a {font-size: 75%;}
