--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,8 @@
 <div class="footer-wrap">
   {% if site.related_posts.size > 0 %}
   <div class="related-articles">
-  <h4>You might also enjoy <small class="pull-right">(<a href="{{ site.url }}/posts/">View all posts</a>)</small></h4>
+    <hr />
+  <h3>You might also enjoy <small class="pull-right">(<a href="{{ site.url }}/writings/">View everything</a>)</small></h3>
     <ul>
     {% for post in site.related_posts limit:3 %}
       <li><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
@@ -61,7 +62,7 @@
     <hr />
   </div><!-- /.related-articles -->
   {% endif %}
-  <footer>
+  <footer  class="copyright">
     {% include _footer.html %}
   </footer>
 </div><!-- /.footer-wrap -->
