--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -35,4 +35,4 @@
 <!-- Modernizr -->
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.7.1.custom.min.js"></script>
 
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic,600italic|Economica:400,700,400italic,700italic|Source+Code+Pro' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic,600italic|Economica:400,400italic|Source+Code+Pro' rel='stylesheet' type='text/css'>
