cleanup and extract gallery stuff

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@
     <hr />
   </div><!-- /.related-articles -->
   {% endif %}
-  <footer  class="copyright">
+  <footer>
     {% include _footer.html %}
   </footer>
 </div><!-- /.footer-wrap -->
