--- a/_includes/_gallery.html
+++ b/_includes/_gallery.html
@@ -1,12 +1,11 @@
-<figure markdown="0">
+<figure style="text-align:center;">
 
-<ul>
 {% for gallery in site.data.gallerylist %}
 {% for image in gallery[1] %}
 {% if gallery[0] == page.gallery %}
-<li><a href="{{ image.filename }}" title="{{ image.title}}"><img src="th/{{ image.filename }}"></a></li>
+<a href="{{ image.filename }}" title="{{ image.title}}"><img src="th/{{ image.filename }}" width="300px;" style="margin:5px;"></a>
 {% endif %}
 {% endfor %}
 {% endfor %}
-</ul>
+
 </figure>
