--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -30,3 +30,9 @@ h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {font-size:65%;}
 h1, h2, h3, h4, h5, h6 {line-height:1.1;}
 .footer-wrap footer span {font-size: 75%;}
 .footer-wrap footer span a {font-size:100%;}
+.acn {
+  background-color: lighten($border-color,70);
+  padding: 1em;
+  border: 1px $border-color solid;
+  @include rounded(3px);
+}
