--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@
   </div>
   <div id="index">
     <h3><a href="{{ site.url}}/writings/">Recent</a></h3>
-    {% for post in site.posts limit:5 %}
+    {% for post in site.posts %}
     <article>
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"></h2>
