--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,9 +45,18 @@
         {% if page.share != false %}{% include _social-share.html %}{% endif %}
         <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
       </footer>
+      <nav class="pagination" role="navigation" style="text-align:center;">
+          {% if page.previous %}
+              <a href="{{ site.url }}{{ page.previous.url }}" class="btn" title="{{ page.previous.title }}">Previous article</a>
+          {% endif %}
+          {% if page.next %}
+              <a href="{{ site.url }}{{ page.next.url }}" class="btn" title="{{ page.next.title }}">Next article</a>
+          {% endif %}
+      </nav><!-- /.pagination -->
     </div><!-- /.article-wrap -->
   </article>
 </div><!-- /#main -->
+
 
 <div class="footer-wrap">
   {% if site.related_posts.size > 0 %}
