--- a/_includes/_gallery.html
+++ b/_includes/_gallery.html
@@ -1,7 +1,7 @@
 <figure style="text-align:center;">
 
 {% for gallery in site.data.gallerylist %}
-{% for image in gallery[1] %}
+{% for image in gallery[1].images %}
 {% if gallery[0] == page.gallery %}
 <a href="{{ image.filename }}" title="{{ image.title}}"><img src="th/{{ image.filename }}" width="300px;" style="margin:5px;"></a>
 {% endif %}
