--- a/_layouts/gallerypage.html
+++ b/_layouts/gallerypage.html
@@ -31,7 +31,7 @@
     {% include _author-bio.html %}
   </div>
   <article class="page">
-    <h1>{{ page.title }}</h1>
+    <h1>{{site.data.gallerylist[page.gallery].title}}</h1>
     <div class="article-wrap">
       {{ content }}
       {% if page.share != false %}
