--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,20 +10,8 @@
 <body class="home">
 
 {% include _navigation.html %}
-
 {% if page.image.feature %}
-  <div class="image-wrap">
-  <img src=
-    {% if page.image.feature contains 'http' %}
-      "{{ page.image.feature }}"
-    {% else %}
-      "{{ site.url }}/images/website/{{ page.image.feature }}"
-    {% endif %}
-  alt="{{ page.title }} feature image">
-  {% if page.image.title %}
-    <span class="image-credit">{{ page.image.title }}</span>
-  {% endif %}
-  </div><!-- /.image-wrap -->
+{% include _page-image.html %}
 {% endif %}
 
 <div id="main" role="main">
