--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
     {% include _author-bio.html %}
   </div>
   <div id="index">
-    <h3><a href="{{ site.url}}/writings/">Recent</a></h3>
+    <h3><a href="{{ site.url}}/writings/">Recent writing</a></h3>
     {% for post in site.posts limit:5 %}
     <article>
       {% if post.link %}
