--- a/_includes/_gallery.html
+++ b/_includes/_gallery.html
@@ -3,7 +3,7 @@
 {% for gallery in site.data.gallerylist %}
 {% for image in gallery[1].images %}
 {% if gallery[0] == page.gallery %}
-<a href="{{ image.filename }}" title="{{ image.title}}"><img src="th/{{ image.filename }}" width="300px;" style="margin:5px;"></a>
+<a href="{{ image.filename }}" title="{{ image.title}}"><img src="th/{{ image.filename }}"  class="thumbnail"></a>
 {% endif %}
 {% endfor %}
 {% endfor %}
