put author-bio on bottom of smallest screens

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,4 +12,11 @@
 </div><!-- /.google-ads -->
 {% endif %}
 
+<footer role="contentinfo">
+  <div class="article-author-bottom">
+    {% include _author-bio.html %}
+  </div>
+  
+</footer>
+
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}.</span>
