--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -340,7 +340,6 @@ $button-size: 1.5rem;
 .article-author-bottom {
 	h3 {
 		margin-bottom: 0;
-		text-align: center;
 	}
 	p {
 		font-size: 80%;
@@ -418,9 +417,10 @@ $button-size: 1.5rem;
 .article-author-bottom {
 	margin-bottom: 1em;
 	@media #{$small} {
-		// display: none;
+		display: none;
 	}
 	.bio-photo {
+		display:none;
 		float: left;
 		margin-right: 25px;
 		max-width: 100px;
@@ -430,6 +430,9 @@ $button-size: 1.5rem;
 		display: inline-block;
 		margin-right: 10px;
 	}
+	.soc {display:inline-block;text-align:center;}
+	h3+p {display:none;}
+	h3 {display:inline;}
 	@media #{$large} {
 		h3,
 		.bio-photo,
