--- a/_layouts/gallerypage.html
+++ b/_layouts/gallerypage.html
@@ -16,7 +16,8 @@
     {% include _author-bio.html %}
   </div>
   <article class="page">
-    <h1>{{site.data.gallerylist[page.gallery].title}}</h1>
+    {% assign galleryname = site.data.gallerylist[page.gallery].title %}
+    <h1>{{ galleryname }}</h1>
     <div class="article-wrap">
       {{ content }}
       {% if page.share != false %}
@@ -25,6 +26,33 @@
       {% endif %}
     </div><!-- /.article-wrap -->
   </article>
+
+{% for gallery in site.data.gallerylist %}
+{% if gallery[0] == page.gallery %}
+  {% assign galnum = forloop.index %}
+  {% assign galnumprev = forloop.index | minus:1 %}
+  {% assign galnumnext = forloop.index | plus:1 %}
+  {% assign galcount = forloop.length %}
+{% endif %}
+{% endfor %}
+
+{% unless galnum == 1 %}
+{% for gallery in site.data.gallerylist %}
+{% if forloop.index == galnumprev %}
+  <a href="/{{gallery[0]}}/">previous</a>
+{% endif %}
+{% endfor %}
+{% endunless %}
+
+{% unless galnum == galcount %}
+{% for gallery in site.data.gallerylist %}
+{% if forloop.index == galnumnext %}
+  <a href="/{{gallery[0]}}/">next</a>
+{% endif %}
+{% endfor %}
+{% endunless %}
+
+
 </div><!-- /#index -->
 
 <div class="footer-wrap">
