--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -114,12 +114,25 @@ figcaption {
    ========================================================================== */
 
 blockquote {
-	margin-left: -28px;
+	margin-left: 0px;
 	padding-left: 20px;
-	border-left: 4px solid lighten($border-color,10);
+	border-left: 4px solid lighten($border-color,20);
 	font-family: $alt-font;
-	font-style: italic;
+	color: lighten($textcolor,10);
+	// font-style: italic;
+	@include font-rem(11);
 }
+
+.source {
+	@include font-rem(10);
+	border: 1px solid lighten($border-color,50);
+	padding:4px;
+	@include rounded(3px);
+}
+.source::before {
+		content: "source";
+		float:right;
+	}
 
 /*
    Footnotes
