--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -482,6 +482,9 @@ $button-size: 1.5rem;
 			cursor: pointer;
 		}
 	}
+	code {
+		background: darken($textcolor, 10)
+	}
 	ul {
 		margin: 2px 0 0;
 		padding: 0;
