--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -16,7 +16,9 @@
   <div class="article-author-bottom">
     {% include _author-bio.html %}
   </div>
-  
+
 </footer>
 
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}.</span>
+
+{% include _svg-feed.html %}
