long areas of putzing about
I hate HTML and CSS and Images

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -21,7 +21,7 @@ figure {
 	margin-bottom: $indent-var;
 }
 
-figure + p { margin-bottom: 3em;}
+// figure + p { margin-bottom: 3em;}
 
 article img {
 	max-width: 100%;
