--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -144,3 +144,59 @@ figure.image-s img {
   @include font(10);
   color: lighten($text-color, 20);
 }
+
+
+// Author module (lifted from page.scss)
+.article-author-bottom {
+	margin-bottom: 1em;
+	@media #{$small} {
+		display: none;
+	}
+	.bio-photo {
+    max-width: 150px;
+		margin: 0 25px 10px 0;
+		@include rounded(3px);
+	}
+
+	.soc {
+    display:inline-block;
+  }
+
+	h3 {
+    display:inline-block;
+    font-size: 125%;
+    margin-top: 0;}
+
+	p.slogan {
+    display:block;
+    font-size: 80%;
+  }
+
+  p.connect {
+    display:block;
+    font-size:80%;
+    font-style: italic;
+  }
+
+  p.rights {
+    // display: block;
+    // margin: auto;
+    text-align: right;
+    font-size: 60%;
+    margin-bottom:0;
+  }
+
+  @media #{$large} {
+		h3,
+		p {
+      max-width: inherit;
+		}
+    .bio-photo{ max-width:150px;}
+	}
+}
+
+footer {
+  border-top: 1px solid lighten($border-color,70);
+  border-bottom: 1px solid lighten($border-color,70);
+  padding:10px;
+}
