updated all layouts
still including that stupid hack

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,3 +1,4 @@
+<div class="footer-wrap">
 {% if site.owner.google.ad-client and site.owner.google.ad-slot %}
 <div class="google-ads">
   <!-- 320 x 50 ad -->
@@ -16,3 +17,4 @@
     {% include _author-bio.html %}
 <p class="rights">&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}.</p>
 </footer>
+</div><!-- /.footer-wrap -->
