--- a/_layouts/gallerypage.html
+++ b/_layouts/gallerypage.html
@@ -12,9 +12,7 @@
 {% include _navigation.html %}
 
 <div id="main" role="main">
-  <div class="article-author-side">
-    {% include _author-bio.html %}
-  </div>
+{% include _side-author-hack.html %}
   <article class="page">
     {% assign galleryname = site.data.gallerylist[page.gallery].title %}
     <h1>{{ galleryname }}</h1>
@@ -30,12 +28,8 @@
 
 </div><!-- /#index -->
 
-<div class="footer-wrap">
-  <footer>
-    {% include _footer.html %}
-  </footer>
-</div><!-- /.footer-wrap -->
 
+{% include _footer.html %}
 {% include _scripts.html %}
 
 </body>
