--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -15,9 +15,7 @@
 {% endif %}
 
 <div id="main" role="main">
-  <div class="article-author-side">
-    {% include _author-bio.html %}
-  </div>
+{% include _side-author-hack.html %}
   <div id="index">
     <h1>{{ page.title }}</h1>
     {% for post in site.posts %}
@@ -42,12 +40,7 @@
   </div><!-- /#index -->
 </div><!-- /#main -->
 
-<div class="footer-wrap">
-  <footer>
-    {% include _footer.html %}
-  </footer>
-</div><!-- /.footer-wrap -->
-
+{% include _footer.html %}
 {% include _scripts.html %}
 
 </body>
