reduce width of author-hack column
moves content left (without making the text wider)

--- a/_includes/_side-author-hack.html
+++ b/_includes/_side-author-hack.html
@@ -1,4 +1,4 @@
-<div class="article-author-side">
+<div class="article-author-side" style="width:5%;">
   <!-- hack for now -->
   &nbsp; {% comment %}{% include _author-bio.html %}{% endcomment %}
 </div>
