--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -288,16 +288,16 @@ $button-size: 1.5rem;
 	position: relative;
 	margin-bottom: 2em;
 	@include clearfix;
-	&:after {
-		content: " ";
-		display: block;
-		position: absolute;
-		bottom: 0;
-		left: 8%;
-		width: 0;
-		height: 0;
-		border: 10px solid transparent;
-		border-bottom-color: $bodycolor;
+	&:after { //comments remove the triangle from the bottom of the main header image
+		// content: " ";
+		// display: block;
+		// position: absolute;
+		// bottom: 0;
+		// left: 8%;
+		// width: 0;
+		// height: 0;
+		// border: 10px solid transparent;
+		// border-bottom-color: $bodycolor;
 		@media #{$small} {
 			left: 25%;
 		}
