got the menu button where I want it
and with a nicer color

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -189,7 +189,7 @@ $button-size: 1.5rem;
 	line-height: 0;
 }
 // When JavaScript is disabled, we hide the toggle button
-.no-js .nav .navtoggle {
+.no-js .nav .navtoogle {
 	display: none;
 }
 // When JavaScript is disabled, we show the menu
