--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -176,8 +176,6 @@ figure.image-s img {
   }
 
   p.rights {
-    // display: block;
-    // margin: auto;
     text-align: right;
     font-size: 60%;
     margin-bottom:0;
@@ -196,4 +194,13 @@ footer {
   border-top: 1px solid lighten($border-color,70);
   border-bottom: 1px solid lighten($border-color,70);
   padding:10px;
+}
+
+// Center the menu/navigation button when small screen
+.navicon-lines-button {
+  background-color: lighten($primary, 15);
+  display:block; margin: 0 auto;
+}
+.nav .navtoogle {
+  background-color: lighten($primary, 15);
 }
