Note to work on footer location

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -204,3 +204,7 @@ footer {
 .nav .navtoogle {
   background-color: lighten($primary, 15);
 }
+
+.footer-wrap {
+  // TODO: figure out how to get the footerstuff to follow along with the center column.
+}
