hardcoded featured portfolio
I can’t figure out how to liquidfy it

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,13 @@
 
 <div id="main" role="main">
   <div id="index">
+    <h3>Featured gallery</h3>
+
+    <h2 style="margin-bottom:2em; text-align:center;">
+    <a href="/gallery-in-camera/" title="Go to In Camera gallery"><img src="/gallery-in-camera/th/02-barbara-tozier-film.jpg" alt="This is What Film Looks Like" class="thumbnail"><br>
+    In Camera </a>
+</h2>
+
     <h3><a href="/writing/">Recent writing</a></h3>
     {% for post in site.posts limit:7 %}
     <article>
