--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,12 +16,37 @@
 
 <div id="main" role="main">
   <div id="index">
-    <h3>Featured gallery</h3>
+    <h3>Featured galleries</h3>
+<article>
+    <h2 style=";margin-bottom:2em;">Elemental<br>
+        <a href="/gallery-elemental/" title="Go to Elemental gallery"><img src="/gallery-elemental/th/06-barbara-tozier-elementals.jpg" alt="Elementals" class="thumbnail">
+       </a>
+    </h2>
+</article>
+<article>
+    <h2 style="margin-bottom:2em;">In Camera<br>
+        <a href="/gallery-in-camera/" title="Go to In Camera gallery"><img src="/gallery-in-camera/th/02-barbara-tozier-film.jpg" alt="This is What Film Looks Like" class="thumbnail">
+        </a>
+    </h2>
+</article>
+<hr>
+    <h3>Featured posts</h3>
 
-    <h2 style="margin-bottom:2em; text-align:center;">
-    <a href="/gallery-in-camera/" title="Go to In Camera gallery"><img src="/gallery-in-camera/th/02-barbara-tozier-film.jpg" alt="This is What Film Looks Like" class="thumbnail"><br>
-    In Camera </a>
-</h2>
+    <article>
+       <h2><a href="/after-lewitt/" title="After LeWitt, Part 1: Diverse">After LeWitt, Part 1: Diverse
+</a></h2>
+       <p>A time lapse video examining one assumption underlying a Sol LeWitt piece.</p>
+   </article>
+   <article>
+
+    <h2><a href="/big/" title="Big">Big
+</a></h2>
+    <p><em>Big</em> is text. <em>Big</em> is process. <em>Big</em> is chaos. <em>Big</em> is big.</p>
+
+
+</article>
+
+<hr>
 
     <h3><a href="/writing/">Recent writing</a></h3>
     {% for post in site.posts limit:7 %}
