Revert "removed "recent writing" section"
This reverts commit 9e335c73f6c41fc0f6e701da273903ce34e4dd37.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,6 @@
 
 <div id="main" role="main">
   <div id="index">
-      <hr>
     <h3>Featured galleries</h3>
 <article>
     <h2 style=";margin-bottom:2em;">Elemental<br>
@@ -48,6 +47,18 @@
 </article>
 
 <hr>
+
+    <h3><a href="/writing/">Recent writing</a></h3>
+    {% for post in site.posts limit:7 %}
+    <article>
+      {% if post.link %}
+        <h2 class="link-post"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" title="{{ post.title }}"></h2>
+      {% else %}
+        <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title | markdownify | remove: '<p>' | remove: '</p>'}}</a></h2>
+        {{ post.excerpt | markdownify }}
+      {% endif %}
+    </article>
+    {% endfor %}
   </div><!-- /#index -->
 </div><!-- /#main -->
 
