tweak css for medium figures

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -139,7 +139,7 @@ figure.image-ss {
 // medium images
 figure.image-m {
   display: table;
-  margin:1em auto;
+  margin:3em auto 1em auto;
   // text-align: center;
 }
 
