--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,8 @@
 sitemap: false
 ---
 
+@import "custom";
+@import "bootstrap";
 
 $doc-font-size: 10;
 $doc-line-height: 16;
@@ -60,8 +62,8 @@ $linkcolorfocus 	: darken($linkcolorvisited, 10);
 
 
 
-@import "vendor/rensburg-svg/svg-icons";
-@import "vendor/magnific-popup/magnific-popup";
+// @import "vendor/rensburg-svg/svg-icons";
+// @import "vendor/magnific-popup/magnific-popup";
 
 body {
   font-family: $base-font;
@@ -189,50 +191,50 @@ figure.image-s img {
 
 
 // Author module (lifted/adapted from page.scss)
-.article-author-bottom {
-	margin-bottom: 1em;
-	@media #{$small} {
-		display: none;
-	}
-	.bio-photo {
-    max-width: 150px;
-		margin: 0 25px 10px 0;
-	}
-
-	.soc {
-    display:inline-block;
-  }
-
-	h3 {
-    display:inline-block;
-    font-size: 125%;
-    margin-top: 0;}
-
-	p.slogan {
-    display:block;
-    font-size: 80%;
-  }
-
-  p.connect {
-    display:block;
-    font-size:80%;
-    font-style: italic;
-  }
-
-  p.rights {
-    text-align: right;
-    font-size: 60%;
-    margin-bottom:0;
-  }
-
-  @media #{$large} {
-		h3,
-		p {
-      max-width: inherit;
-		}
-    .bio-photo{ max-width:150px;}
-	}
-}
+// .article-author-bottom {
+// 	margin-bottom: 1em;
+// 	@media #{$small} {
+// 		display: none;
+// 	}
+// 	.bio-photo {
+//     max-width: 150px;
+// 		margin: 0 25px 10px 0;
+// 	}
+//
+// 	.soc {
+//     display:inline-block;
+//   }
+//
+// 	h3 {
+//     display:inline-block;
+//     font-size: 125%;
+//     margin-top: 0;}
+//
+// 	p.slogan {
+//     display:block;
+//     font-size: 80%;
+//   }
+//
+//   p.connect {
+//     display:block;
+//     font-size:80%;
+//     font-style: italic;
+//   }
+//
+//   p.rights {
+//     text-align: right;
+//     font-size: 60%;
+//     margin-bottom:0;
+//   }
+//
+//   @media #{$large} {
+// 		h3,
+// 		p {
+//       max-width: inherit;
+// 		}
+//     .bio-photo{ max-width:150px;}
+// 	}
+// }
 
 footer {
   border-top: 1px solid lighten($border-color,70);
